fix width container and fix carousel cover detail bug not align properly when change component

--- a/src/styles.less
+++ b/src/styles.less
@@ -19,7 +19,7 @@ body {
 }
 
 .container {
-  width: 75%;
+  width: 80%;
   height: 100%;
   max-width: 1600px;
   display: inline-block;
